# Gstreamer_Refresh

./: .gitignore  CMakeLists.txt
src/: appsink_example.cpp  appsrc_to_mp4.cpp
src/PoC_buffering/: main.cpp  prebuffer_recorder.cpp  prebuffer_recorder.hpp
